[gd_scene load_steps=4 format=2]

[ext_resource path="res://MemoryDump.tscn" type="PackedScene" id=1]
[ext_resource path="res://MemoryView.gd" type="Script" id=2]
[ext_resource path="res://MemoryTexture.tscn" type="PackedScene" id=3]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 387.0
margin_bottom = 193.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
margin_left = 7.0
margin_top = 7.0
margin_right = 386.0
margin_bottom = 186.0
mouse_filter = 1
scroll_horizontal_enabled = false

[node name="Dump" parent="ScrollContainer" instance=ExtResource( 1 )]
margin_right = 367.0
mouse_filter = 2

[node name="ScrollContainer2" type="ScrollContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 380.0
margin_bottom = 186.0
mouse_filter = 1
scroll_horizontal_enabled = false

[node name="Bitmaps" parent="ScrollContainer2" instance=ExtResource( 3 )]
margin_right = 14.0
margin_bottom = 14.0
mouse_filter = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="visibility_changed" from="." to="." method="_on_PanelContainer_visibility_changed"]
